# kokage-ui

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/reference/: index.html
catalog/: iframe-resize.js  index.html
catalog/components/: index.html
catalog/elements/: index.html
catalog/features/: index.html
catalog/fields/: index.html
catalog/htmx/: index.html
catalog/models/: index.html
catalog/previews/: alert.html  autorefresh.html  badge.html  breadcrumb.html  button.html  card.html  chart.html  codeblock.html  collapse-accordion.html  confirmdelete.html  daisybutton.html  daisyinput.html  daisyselect.html  daisytable.html  darkmodetoggle.html  details-summary.html  dropdown.html  form.html  hero.html  infinitescroll.html  input.html  modal.html  modeldetail.html  modelform.html  modeltable.html  navbar.html  progress.html  registerform.html  repeaterinput.html  searchfilter.html  select-option.html  sortablelist.html  stats-stat.html  steps.html  table.html  tabs.html  taginput.html  themeswitcher.html  toast.html  ul-ol.html  (+1 more)
docs/: getting-started.md  index.md
docs/api/: reference.md
docs/catalog/: components.md  elements.md  features.md  fields.md  htmx.md  iframe-resize.js  index.md  models.md
docs/examples/: admin_demo.md  agent_demo.md  auth_demo.md  blog.md  chart_demo.md  chat_demo.md  dashboard.md  deepagents_demo.md  (+4 more)
examples/: admin_demo.py  agent_demo.py  auth_demo.py  autocomplete_demo.py  blog.py  chart_demo.py  chat_demo.py  dashboard.py  deepagents_demo.py  deepagents_hitl_demo.py  deepagents_plan_demo.py  hello.py  inline_edit_demo.py  langchain_demo.py  media_gallery.py  realtime.py  richtext_demo.py  sortable_demo.py  threaded_agent_demo.py  timeline_demo.py  todo.py
getting-started/: index.html
scripts/: build_catalog.py
search/: search_index.json
tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_autocomplete.py  test_charts.py  test_chat.py  test_cli.py  test_code.py  test_components.py  test_conversation.py  test_crud.py  test_datagrid.py  test_datetime.py  test_deepagents.py  test_elements.py  test_forms.py  test_i18n.py  test_inline_edit.py  test_integration.py  test_langchain.py  test_markdown.py  test_media.py  test_models.py  test_notifications.py  test_preview.py  test_repeater.py  test_richtext.py  test_sortable.py  test_storage.py  test_tag.py  test_testing.py  test_theme.py  test_threaded_agent.py  test_timeline.py  test_tool_registry.py  test_toolbar.py  test_ui_chat_agent.py
(+133 files in other folders)
