[project]
name = "kokage-ui"
version = "0.6.0"
description = "Add htmx + DaisyUI based UI to FastAPI with pure Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi[standard]>=0.100.0",
    "markupsafe>=2.1.0",
]

[project.optional-dependencies]
sql = ["sqlmodel>=0.0.16"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "ruff>=0.8.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
]
langchain = [
    "langchain-core>=0.3",
]
markdown = [
    "markdown>=3.5",
]
all = [
    "kokage-ui[sql,langchain,markdown]",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocs-autorefs",
]

[project.scripts]
kokage-ui = "kokage_ui.dev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["assets", "tests", "docs", "site"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
